加了点小东西

--- a/现在是09年，B站前端跑路了，只留下开发到一半的代码/index.html
+++ b/现在是09年，B站前端跑路了，只留下开发到一半的代码/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="cn">
+
 <!-- 这是毛毛熊学习【前端三件套】后，自己照着B站写的练习项目 -->
+<!--泛客过来糊弄几笔-->
 <!-- 这是毛毛熊学习【前端三件套】后，自己照着B站写的练习项目 -->
 <!-- 这是毛毛熊学习【前端三件套】后，自己照着B站写的练习项目 -->
 <head>
